<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/wallet_options_address_book"
		android:icon="@drawable/ic_action_address_book"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_activity_title"/>
	<item
		android:id="@+id/wallet_options_exchange_rates"
		app:showAsAction="never"
		android:title="@string/exchange_rates_activity_title"/>
	<item
		android:id="@+id/wallet_options_network_monitor"
		app:showAsAction="never"
		android:title="@string/network_monitor_activity_title"/>
	<item
		app:showAsAction="never"
		android:title="@string/wallet_options_backup">
		<menu>
			<item
				android:id="@+id/wallet_options_export_keys"
				app:showAsAction="never"
				android:title="@string/export_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_import_keys"
				app:showAsAction="never"
				android:title="@string/import_keys_dialog_title"/>
		</menu>
	</item>
	<item
		android:id="@+id/wallet_options_preferences"
		app:showAsAction="never"
		android:title="@string/preferences_activity_title"/>
	<item
		android:id="@+id/wallet_options_about"
		app:showAsAction="never"
		android:title="@string/about_title"/>
	<item
		android:id="@+id/wallet_options_safety"
		app:showAsAction="never"
		android:title="@string/wallet_options_safety"/>
	<item
		android:id="@+id/wallet_options_donate"
		app:showAsAction="never"
		android:title="@string/wallet_options_donate"/>
	<item
		android:id="@+id/wallet_options_help"
		app:showAsAction="never"
		android:title="@string/button_help"/>
</menu>