<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/sending_addresses_context_send"
		android:icon="@drawable/ic_action_send"
		android:title="@string/address_book_context_send_title"
		android:titleCondensed="@string/button_send_coins"
		app:showAsAction="ifRoom|withText" />
	<item
		android:id="@+id/sending_addresses_context_edit"
		android:icon="@drawable/ic_action_edit"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_edit_title"
		android:titleCondensed="@string/button_edit"/>
	<item
		android:id="@+id/sending_addresses_context_remove"
		android:icon="@drawable/ic_action_delete"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_remove_title"
		android:titleCondensed="@string/button_delete"/>
	<item
		android:id="@+id/sending_addresses_context_show_qr"
		android:icon="@drawable/ic_action_qr"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_show_qr_title"/>
	<item
		android:id="@+id/sending_addresses_context_copy_to_clipboard"
		android:icon="@drawable/ic_action_copy"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_copy_to_clipboard_title"
		android:titleCondensed="@string/button_copy"/>

</menu>