<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/wallet_addresses_context_edit"
		android:icon="@drawable/ic_action_edit"
		android:title="@string/address_book_context_edit_title"
		android:titleCondensed="@string/button_edit"
		app:showAsAction="ifRoom|withText" />
	<item
		android:id="@+id/wallet_addresses_context_copy_to_clipboard"
		android:icon="@drawable/ic_action_copy"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_copy_to_clipboard_title"
		android:titleCondensed="@string/button_copy"/>
	<item
		android:id="@+id/wallet_addresses_context_default"
		android:icon="@drawable/ic_action_set_as_default"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_default_title"
		android:titleCondensed="@string/button_set_as_default"/>
	<item
		android:id="@+id/wallet_addresses_context_show_qr"
		android:icon="@drawable/ic_action_qr"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_context_show_qr_title"/>
	<item
		android:id="@+id/wallet_addresses_context_browse"
		app:showAsAction="never"
		android:title="@string/action_browse"/>

</menu>