<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/about_title" >
		<Preference
			android:key="about_version"
			android:title="Version" />
		<Preference
			android:summary="© 2011-2014, Andreas Schildbach\n© 2013-2014, HashEngineering Solutions\n© 2018-, Dimecoin Network"
			android:title="Copyright" />
        <Preference
                android:summary="Version 0.8.3.15 (v0.8.3.15-g09e437b-beta) and above"
                android:title="Dimecoin Compatibility" />
		<Preference
			android:key="about_license"
			android:title="@string/about_license_title" />
		<Preference
			android:key="about_source"
			android:title="Source Code" />
		<Preference
			android:key="about_market_app"
			android:summary="@string/about_market_app_summary"
			android:title="@string/about_market_app_title" />
        <Preference
                android:key="about_credits_website"
                android:title="@string/about_credits_website_title" />
		<Preference android:key="about_credits_bitcoinj" />
		<Preference
			android:key="about_credits_zxing"
			android:title="@string/about_credits_zxing_title" />
	</PreferenceCategory>

</PreferenceScreen>