<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:fab="http://schemas.android.com/apk/res-auto">

	<com.github.clans.fab.FloatingActionMenu
		android:id="@+id/wallet_actions"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="8dp"
		fab:menu_icon="@drawable/fab_add"
		fab:menu_colorNormal="@color/dimecoin_blue"
		fab:menu_colorPressed="@color/dimecoin_light_blue"
		fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
		fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right">

		<com.github.clans.fab.FloatingActionButton
			android:id="@+id/wallet_actions_send"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_action_send"
			fab:fab_label="@string/button_send_coins"
			fab:fab_colorNormal="#4CAF50"
			fab:fab_colorPressed="@color/dimecoin_light_blue" />

		<com.github.clans.fab.FloatingActionButton
			android:id="@+id/wallet_actions_request"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_action_receive"
			fab:fab_label="@string/button_request_coins"
			fab:fab_colorNormal="#009688"
			fab:fab_colorPressed="@color/dimecoin_light_blue" />

		<com.github.clans.fab.FloatingActionButton
			android:id="@+id/wallet_actions_send_qr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_action_qr"
			fab:fab_label="@string/button_scan"
			fab:fab_colorNormal="#607D8B"
			fab:fab_colorPressed="@color/dimecoin_light_blue" />
	</com.github.clans.fab.FloatingActionMenu>
</LinearLayout>